# yanwu

./: .gitignore  LICENSE  README.md  dev_requirements.txt  pyproject.toml  setup.py
src/shredder/: App.py
src/yanwu/: app.py
tests/: test_app.py
