[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yanwu"
version = "0.0.2"
authors = [
  { name="Richard Ma", email="richard.ma.19850509@gmail.com" },
]
description = "A tiny framework for python cli tools"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/richard-ma/yanwu"
"Bug Tracker" = "https://github.com/richard-ma/yanwu/issues"
